fix: Remove z-index and add background color for user-avatar-menu

--- a/clients/components/user-avatar-menu/index.scss
+++ b/clients/components/user-avatar-menu/index.scss
@@ -1,6 +1,7 @@
 .user-avatar-menu {
   min-width: 216px;
   max-width: 284px;
+  background-color: white;
   box-shadow: 0px 8px 24px 4px rgba(148, 163, 184, 0.25);
   border: 1px solid var(--gray-200);
 
